Sun APR 20 2003 Lachlan Andrew  <lha@users.sourceforge.net>

	* htdig/htdig.cc:  delete  db.words.db_weakcmpr  if  -i  specified.

Wed Feb 26 22:10:40 CET 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* htnet/HtHTTP.cc: fixed colon (':') problem with HTTP header parsing,
	  as Frank Passek, Gilles and others suggested, as space is not
	  mandatory between the field declaration and the field value returned
	  by the server

Sun Feb 23 10:20:58 CET 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* htcommon/defaults.[cc,xml]: added the 'cookies_input_file'
	  configuration attribute for pre-loading cookies in memory
	* htdig/htdig.cc: added the feature above; the code automatically
	  loads the cookies from the input file into the 'jar' that will be
	  used during the crawl.

Sun Feb 23 10:16:08 CET 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* htnet/HtHTTP.h: removed the NULL pointer check before assigning a
	  new jar to the HTTP code

Tue Feb 11 2003  Lachlan Andrew  <lha@users.sourceforge.net>

	* htcommon/defaults.cc:  Set default  compression_level  to 6,
	  which enables Neal's  wordlist_compression_zlib  flag.

Tue Feb 11 2003  Lachlan Andrew  <lha@users.sourceforge.net>

	* htcommon/{DocumentRef.h, HtWordReference.h},
	  htsearch/WeightWord.{cc,h},
	  htsearch/parser.{cc,h}, htsearch/htsearch.cc:
	  Added field-restricted searching, by  title:word  or  author:word

	* htdig/ExternalParser.cc, htdig/HTML.{cc,h}, htdig/Parsable.{cc,h},
	  htdig/Retriever.{cc,h}:
	  Parse  author  from <meta ...> tags.  Also moved some common
	  functionality from  HTML/ExternalParser  into  Parsable.

	* test/t_htsearch, htcommon/defaults.cc,
	  htdoc/{TODO.html,hts_general.html,hts_method.html}:
	  Test and document the above

Sun Feb 9 2003  Lachlan Andrew  <lha@users.sourceforge.net>

	* htdig/HTML.cc: fix bug in detection of deprecated noindex_start/end
	* htsearch/Display.cc: try harder to find value for DBL_MAX   #680836